@@ -112,6 +112,7 @@ Changes from 4.3.x -> 4.4-alpha
     semaphore has been released (may be useful in certain heavy-load situations)
   - only flush peer queues of expired messages every few seconds instead of
     re-walking the queue for every message that comes in
+* xymond now allocates a persistent buffer in memory for preparing a channel message
 
 
 Changes from 4.3.23 -> 4.3.24 (23 Nov 2015)
